--- a/manifest.json
+++ b/manifest.json
@@ -18,11 +18,7 @@
     "<all_urls>"
   ],
   "commands":{
-  "_execute_browser_action":{
-    "suggested_key":{
-      "default": "Ctrl+Shift+Z"
-    }
-  }
+  "_execute_browser_action":{}
   },
   "icons": {
     "16": "static/icon-16.png",
